--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -38,6 +38,7 @@
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 32px;
 }
 
